--- a/hw-3.html
+++ b/hw-3.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<script>
 
+
+</script>
 </body>
 </html>
+
+
+display: block;
+margin-top: 10px;
+padding: 15px 15px;
+background-color: #007bff;
+color: white;
+cursor: pointer;
+border-radius: 30px;
